--- a/client/src/photo.html
+++ b/client/src/photo.html
@@ -15,7 +15,8 @@
 </body>
 <script>
     const WIDTH = 200;
-
+    // var fd = new Date();
+   console.log(Date.now())
     let input = document.querySelector("input");
     input.addEventListener("change", (event) => {
         let image_file = event.target.files[0];
